# hacktj25

./: .gitignore  README.md  compose.yaml  dump.rdb  pyproject.toml
backend/: Untitled.ipynb  compose.yaml  manage.py  pyproject.toml  settings.py
backend/credibly/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/credibly/apps/api/: apps.py  consumers.py  forms.py  models.py  routing.py  serializers.py  server.py  tasks.py  urls.py  views.py
backend/credibly/apps/api/migrations/: 0001_initial.py  0002_biasedcontent_accuracy_certainty.py  0003_contentcreator_biasedmedia_creator.py
backend/credibly/apps/users/: apps.py
backend/credibly/apps/users/migrations/: 0001_initial.py
frontend/: package.json  pnpm-lock.yaml
frontend/components/: CredibilityScore.vue  InfoCard.vue
frontend/composables/: index.d.ts  useWebSocket.ts
frontend/entrypoints/: background.ts  content.ts
frontend/entrypoints/popup/: App.vue  style.css
hacktj25/: .gitignore  package.json
