[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "channels[daphne]>=4.2.0",
    "django>=5.1.7",
    "django-fastdev>=1.13.0",
    "djangorestframework>=3.15.2",
    "redis>=5.2.1",
    "textblob>=0.19.0",
    "moviepy>=2.1.2",
    "whisper-openai>=1.0.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.0.4",
]
